--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,4 +130,4 @@ jobs:
         with:
           context: ./frontend/
           push: true
-          tags: username/taski_frontend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/taski_frontend:latest
